. was missing in select
. was missing in select

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
    GLOBAL STYLES
 =========================== */
 
-select {
+.select {
   appearance: none; /* removes browser default arrow */
   -webkit-appearance: none;
   -moz-appearance: none;
